--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fredoka+One&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
-* {
+*,
+*::after,
+*::before {
   /* outline: 3px solid red; */
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 :root {
@@ -19,11 +28,26 @@ body {
   font-family: "Gothic A1", sans-serif;
   font-family: "Poppins", sans-serif;
   background: var(--color-blanco);
+  font-weight: 400;
+  line-height: 1.7;
+  color: #000000;
+
+  box-sizing: border-box;
 }
 
 .hero {
-  height: 100vh;
-  background-image: linear-gradient(to right, #4ca1af, #eff7f9);
+  height: 95vh;
+  background-image: linear-gradient(
+      to right,
+      rgba(244, 250, 243, 0.545),
+      rgba(10, 23, 19, 0.51)
+    ),
+    url("../img/fondoHero3.jpg");
+  background-size: cover;
+  background-position: top;
+  position: relative;
+
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
 .contenedor {
@@ -36,7 +60,7 @@ body {
 /* ------------------- seccion menu ------------------- */
 
 .nav {
-  height: 70px;
+  height: 7rem;
   color: var(--color-blanco);
 }
 
@@ -54,39 +78,60 @@ body {
 
 .nav__titulo {
   color: var(--color-blanco);
+  font-size: 2.5rem;
 }
 
 .nav__link {
   color: var(--color-blanco);
   text-decoration: none;
   margin-left: 1em;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  font-size: 1.3rem;
 }
 
-.nav__link--boton {
+.nav__link:hover {
+  transform: translateY(-0.3rem);
+}
+
+.nav__link:active {
+  transform: translateY(-0.1rem);
+}
+
+.nav__link--boton:visited,
+.nav__link--boton:link {
+  text-transform: uppercase;
   font-weight: 700;
-  padding: 5px 10px;
+  padding: 0.4rem 0.6rem;
   background: var(--color-primario);
   border: none;
-  border-radius: 30px;
+  border-radius: 10rem;
   cursor: pointer;
-  border: 2px solid var(--color-primario);
   color: #283048;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
 }
 
 .nav__link--boton:hover {
-  color: var(--color-blanco);
-  background: #3dfaff;
-  border: 2px solid #3dfaff;
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.nav__link--boton:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .nav__pintura {
-  width: 40px;
-  margin-right: 7px;
+  width: 4rem;
+  margin-right: 0.7rem;
 }
 /* -----------------seccion hero main ------------------ */
 
 .hero__main {
-  height: 100%;
+  height: 75%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -96,6 +141,8 @@ body {
 .hero__textos {
   flex: 1;
   grid-column: 1/3;
+
+  backface-visibility: hidden;
 }
 
 .hero__picture {
@@ -106,65 +153,121 @@ body {
 
 .hero__img {
   max-width: 80%;
+  animation: moveInRight 1s ease-out 0.8s;
+  animation-fill-mode: backwards;
 }
 
 .hero__titulo {
   text-align: center;
-  font-size: 4rem;
-  color: var(--color-primario);
-  margin-bottom: 10px;
+  font-size: 6rem;
+  color: #e9f1f7;
+
+  animation-name: moveInLeft;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
 }
 
 .hero__paragrafo {
-  font-size: 1.5rem;
-  font-weight: 300;
+  font-size: 2.2rem;
+  font-weight: 600;
   color: #000000;
   text-align: center;
+  animation: moveInRight 2s ease-out;
+  font-family: "Gothic A1", sans-serif;
 }
 
 .hero__form {
   display: flex;
   justify-content: center;
   align-items: baseline;
+  animation: moveInBottom 0.5s ease-out 0.9s;
+  animation-fill-mode: backwards;
 }
 
 .hero__search {
   margin-top: 1.5rem;
   margin-right: 0.5rem;
-  padding: 5px;
-  border-radius: 50px;
+  padding: 0.5rem;
+  border-radius: 5rem;
   outline: none;
-  border: 1px solid var(--color-blanco);
+  border: 0.1rem solid var(--color-blanco);
 }
 
 .hero__buscar {
   font-weight: 700;
-  font-size: 1.2rem;
-  padding: 10px;
+  font-size: 1.5rem;
+  padding: 1rem;
   color: var(--color-blanco);
 }
 
 .hero__boton {
   color: #283048;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 700;
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
   background: var(--color-primario);
   border: none;
-  border-radius: 30px;
+  border-radius: 3rem;
   cursor: pointer;
-  border: 2px solid var(--color-primario);
+  border: 0.2rem solid var(--color-primario);
+  transition: all 0.2s;
 }
 
 .hero__boton:hover {
   color: var(--color-blanco);
   background: #3dfaff;
-  border: 2px solid #3dfaff;
+  border: 0.2rem solid #3dfaff;
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
 .nav__label,
 .nav__input {
   display: none;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  80% {
+    transform: translateX(1.5rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+
+  80% {
+    transform: translateX(-1rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
 
 @media (max-width: 969px) {
@@ -240,7 +343,7 @@ body {
 /* ------------------------- about ------------------------- */
 .about {
   background: #fefdff;
-  padding: 70px 0;
+  padding: 7rem 0;
 }
 
 .about__secciones {
@@ -248,73 +351,84 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  align-content: flex-start;
 }
+
 .about__seller {
   width: 90%;
-  height: 400px;
-  max-width: 550px;
+  height: 40rem;
+  max-width: 55rem;
 }
 
 .about__titulo {
   font-size: 4rem;
   text-align: left;
   color: var(--color-terciario);
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .about__subtitulo {
   font-family: "Fredoka One", cursive;
-  font-size: 1.5rem;
-  padding-bottom: 15px;
+  font-size: 1.8rem;
+  padding-bottom: 0.8rem;
   color: var(--color-terciario);
 }
 
 .about__text {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   color: var(--color-terciario);
   text-align: justify;
+  font-size: 1.3rem;
 }
 
 .about__img1 {
   display: block;
-  width: 200px;
-  height: 200px;
+  width: 20rem;
+  height: 20rem;
   background-size: cover;
   border-radius: 50%;
   box-shadow: var(--box-shadow-principal);
 }
 
 .about__picture {
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
 }
 
 .about__cta {
   text-decoration: none;
   color: #283048;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: 700;
-  padding: 3px 12px;
+  padding: 0.3rem 1.2rem;
   background: #72ddf7;
   border: none;
-  border-radius: 30px;
+  border-radius: 3rem;
   cursor: pointer;
-  border: 2px solid #72ddf7;
+  border: 0.2rem solid #72ddf7;
 }
 
 .about__cta:hover {
   color: var(--color-blanco);
   background: #3dfaff;
-  border: 2px solid #3dfaff;
+  border: 0.2rem solid #3dfaff;
 }
 
 @media screen and (max-width: 500px) {
+  .about__secciones {
+    justify-content: center;
+  }
+
   .about__titulo {
     font-size: 2rem;
   }
 
   .about__secciones {
-    width: 450px;
-    height: 1000px;
+    width: 45rem;
+    height: 83.7rem;
+  }
+
+  .about__seller--separador {
+    margin-bottom: 3rem;
   }
 }
 
@@ -323,20 +437,20 @@ body {
 /* ----------------------- gallery ---------------------------- */
 
 .gallery {
-  padding: 30px 0;
+  padding: 3rem 0;
   background: #fefdff;
   background: -webkit-linear-gradient(to right, #000c40, #fefdff);
   background: linear-gradient(to right, #000c40, #fefdff);
 }
 
 .gallery__control {
-  margin-top: 70px;
-  margin-bottom: 50px;
+  margin-top: 7rem;
+  margin-bottom: 5rem;
 }
 
 .gallery__title {
   text-align: center;
-  font-size: 4rem;
+  font-size: 4.5rem;
   margin-bottom: 7px;
 }
 
@@ -350,15 +464,15 @@ body {
   font-family: "Dancing Script", cursive;
   text-align: center;
   font-weight: 500;
-  letter-spacing: 2px;
-  word-spacing: 2px;
-  font-size: 2rem;
-  margin-bottom: 10px;
+  letter-spacing: 0.2rem;
+  word-spacing: 0.2rem;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 .gallery__contenedor {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -366,10 +480,10 @@ body {
 
 .gallery__picture {
   width: 30%;
-  height: 450px;
-  margin-bottom: 20px;
+  height: 45rem;
+  margin-bottom: 2rem;
   display: block;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   object-fit: cover;
   box-shadow: var(--box-shadow-principal);
 }
@@ -381,7 +495,7 @@ body {
 
 .gallery__icon {
   width: 10%;
-  height: 100px;
+  height: 10rem;
 }
 
 /* ----------------- close gallery ---------------------- */
@@ -390,68 +504,75 @@ body {
 
 .portfolio {
   background: #fefdff;
-  padding: 80px 0;
+  padding: 8rem 0;
 }
 
 .portafolio__grid {
-  height: 600px;
+  height: 60rem;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
+  gap: 2rem;
   place-items: center;
 }
 
 .portafolio__informacion {
-  height: 550px;
-  padding: 10px;
+  height: 55rem;
+  padding: 1rem;
   grid-area: 1/1/4/4;
-  gap: 20px;
+  gap: 2rem;
   width: 90%;
   margin: 0 auto;
   background: #fff;
   box-shadow: 6px 6px 13px -1px rgba(0, 0, 0, 0.7);
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 
 .portafolio__title {
-  padding: 10px;
+  padding: 1rem;
   font-size: 2rem;
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
+  font-size: 2rem;
 }
 
 .portafolio__paragrafo {
   font-family: "Gothic A1", sans-serif;
   font-weight: 300;
-  padding: 10px;
+  padding: 1rem;
   text-align: justify;
+  font-size: 1.6rem;
 }
 
 .portafolio__picture {
-  width: 183px;
-  height: 122px;
+  width: 18.3rem;
+  height: 12.2rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 7px;
+  border-radius: 0.7rem;
 }
 
 .portafolio__name {
   font-family: "Dancing Script", cursive;
   text-align: center;
+  font-size: 1.6rem;
 }
 
 @media screen and (max-width: 500px) {
   .contenedor {
     width: 95%;
-    max-width: 390px;
+    max-width: 39rem;
     overflow: hidden;
     margin: 0 auto;
   }
 
   .portfolio {
-    padding-top: 50px;
-    padding-bottom: 10px;
+    padding-top: 5rem;
+    padding-bottom: 1rem;
+  }
+
+  .portafolio__paragrafo {
+    font-size: 1.2rem;
   }
 
   .portafolio__grid {
@@ -468,13 +589,13 @@ body {
       "member5 member6"
       "member7 member8"
       "member9 .";
-    gap: 10px;
+    gap: 1rem;
     place-items: center;
   }
 
   .portafolio__informacion {
-    height: 530px;
-    gap: 20px;
+    height: 53rem;
+    gap: 2rem;
     width: 90%;
     margin: 0 auto;
   }
@@ -524,7 +645,6 @@ body {
 
 .layouts {
   background: #fefdff;
-  padding-top: 40px;
 }
 
 .layouts__control {
@@ -541,37 +661,37 @@ figure.layouts__picture {
 }
 
 .layouts__img3 {
-  margin: 50px;
+  margin: 5rem;
   width: 85%;
   background-size: cover;
   box-shadow: var(--box-shadow-principal);
 }
 
 .layouts__title {
-  font-size: 3.5rem;
+  font-size: 4.4rem;
 }
 
 .layouts__paragrafo {
-  font-size: 1rem;
-  margin: 25px 0;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .layouts__cta {
   text-decoration: none;
   color: var(--color-secundario);
-  font-size: 1rem;
+  font-size: 1.6rem;
   font-weight: 700;
-  padding: 3px 12px;
+  padding: 0.3rem 1rem;
   background: #087ca7;
-  border-radius: 30px;
+  border-radius: 3rem;
   cursor: pointer;
-  border: 2px solid #087ca7;
+  border: 0.2rem solid #087ca7;
 }
 
 .layouts__cta:hover {
   color: var(--color-blanco);
   background: #3dfaff;
-  border: 2px solid #3dfaff;
+  border: 0.2rem solid #3dfaff;
 }
 
 @media screen and (max-width: 500px) {
@@ -591,8 +711,8 @@ figure.layouts__picture {
   }
 
   .layouts__img3 {
-    margin: 50px;
-    margin-bottom: 20px;
+    margin: 5rem;
+    margin-bottom: 2rem;
     width: 70%;
     background-size: cover;
     box-shadow: var(--box-shadow-principal);
@@ -606,7 +726,7 @@ figure.layouts__picture {
   }
 
   .layouts__cta {
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
   }
 }
 
@@ -617,10 +737,10 @@ figure.layouts__picture {
 .opinion__contenedor {
   width: 100%;
   height: 100%;
-  margin: 30px 0;
+  margin: 3rem 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
+  gap: 3rem;
   justify-content: center;
 }
 
@@ -636,47 +756,48 @@ figure.layouts__picture {
 }
 
 .opinion {
-  padding: 70px;
+  padding: 7rem;
   background: #fefdff;
 }
 
 .opinion__title {
-  font-size: 3rem;
-  margin-bottom: 10px;
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
 .opinion__caption {
-  font-size: 1rem;
+  font-size: 1.6rem;
   text-align: center;
 }
 
 .opinion__img {
-  width: 50px;
-  height: 50px;
+  width: 5rem;
+  height: 5rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 50px;
-  margin-right: 15px;
+  border-radius: 5rem;
+  margin-right: 1.5rem;
 }
 
 .opinion__mensaje {
-  padding: 30px;
+  padding: 3rem;
   width: 100%;
   margin: 0 auto;
   background: #fff;
-  border: 1px solid black;
-  border-radius: 10px;
+  border: 0.1rem solid black;
+  border-radius: 1rem;
 }
 
 .opinion__paragrafo {
-  padding-top: 10px;
+  padding-top: 1rem;
+  font-size: 1.1rem;
 }
 
 @media screen and (max-width: 500px) {
   .opinion {
-    padding: 30px 0;
+    padding: 3rem 0;
     background: #fefdff;
   }
 
@@ -690,19 +811,19 @@ figure.layouts__picture {
 /* --------------------- Noticias --------------------- */
 
 .noticias {
-  padding-bottom: 70px;
+  padding-bottom: 8.6rem;
   background: #fefdff;
 }
 
 .noticias__titulo {
-  font-size: 3rem;
-  margin-bottom: 30px;
+  font-size: 3.5rem;
+  margin-bottom: 3rem;
   text-align: center;
 }
 
 .noticias__grid {
   display: grid;
-  gap: 20px;
+  gap: 2rem;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
@@ -717,7 +838,7 @@ figure.layouts__picture {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 7px;
+  border-radius: 0.7rem;
 }
 
 .noticias__imagenUno {
@@ -750,39 +871,41 @@ figure.layouts__picture {
 .noticias__tituloNoticia {
   color: #3381fe;
   font-family: "Gothic A1", sans-serif;
+  font-size: 1.6rem;
 }
 
 .noticias__tituloNoticia::after {
   content: " ";
   display: block;
   width: 100%;
-  height: 1px;
+  height: 0.1rem;
   background: #000000;
 }
 
 .noticias__paragraf {
   text-align: left;
+  font-size: 1.4rem;
   font-family: "Gothic A1", sans-serif;
 }
 
 .noticias__subtitulo {
-  padding-bottom: 15px;
+  padding-bottom: 1.5rem;
   font-family: "Gothic A1", sans-serif;
   font-weight: 700;
   color: #3381fe;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .noticias__subtitulo::after {
   content: " ";
   display: block;
   width: 100%;
-  height: 1px;
+  height: 0.1rem;
   background: #000000;
 }
 
 .noticias__textos {
-  padding: 15px 0;
+  padding: 1.5rem 0;
 }
 
 .notiCero {
@@ -802,7 +925,7 @@ figure.layouts__picture {
 }
 
 .noticias__excrito {
-  margin-left: 20px;
+  margin-left: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -825,7 +948,8 @@ figure.layouts__picture {
 }
 
 .title {
-  padding-bottom: 20px;
+  padding-bottom: 2rem;
+  font-size: 2rem;
 }
 
 .footer__container {
@@ -837,23 +961,24 @@ figure.layouts__picture {
 
 .footer__texts {
   width: 50%;
+  font-size: 1.5rem;
 }
 
 .footer__icon {
   display: inline-block;
   font-size: 2rem;
-  margin: 0 30px;
+  margin: 0 3rem;
   text-decoration: none;
   color: #fff;
-  margin-bottom: 30px;
-  width: 60px;
-  height: 60px;
-  border: 1px solid;
+  margin-bottom: 3rem;
+  width: 6rem;
+  height: 6rem;
+  border: 0.1rem solid;
   border-radius: 50%;
 }
 
 .footer__icon.fab {
-  line-height: 60px;
+  line-height: 6rem;
 }
 
 .footer__icon:hover {
@@ -865,8 +990,8 @@ figure.layouts__picture {
 .footer__link {
   display: inline-block;
   color: #fff;
-  margin: 0 20px;
-  margin-bottom: 30px;
+  margin: 0 2rem;
+  margin-bottom: 3rem;
 }
 
 .footer__link:hover {
@@ -879,6 +1004,6 @@ figure.layouts__picture {
 }
 
 .footer__picture {
-  margin-top: 30px;
+  margin-top: 3rem;
   width: 90%;
 }
